--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -1,42 +1,16 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+body{
+    text-align: center;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+h1{
+    font-size: 3rem;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.noteBtn{
+    padding: 10px 20px;
+    font-size: 1.5rem;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.noteForm{
+    
 }
