--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -29,9 +29,16 @@ input{
     margin-block: 10px;
 }
 
+.notes{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .note{
     border: solid 1px black;
     border-radius: 10px;
     margin-block: 10px;
     padding: 15px;
+    width: max(400px, 40%);
 }
