--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -10,23 +10,41 @@ body{
     align-items: center;
 }
 
+.app{
+
+}
+
+aside{
+    display: flex;
+    justify-content: space-between;
+    transition-duration: 3s;
+    width: 100%;
+    padding-inline: 20%;
+    box-sizing: border-box;
+}
+
 h1{
     font-size: 3rem;
 }
 
-.noteBtn{
+.bigBtn{
     padding: 10px 20px;
     font-size: 1.5rem;
+    margin: 0px 3px;
+    height: 76px;
 }
 
 .noteForm{
     display: flex;
     flex-direction: column;
     max-width: 500px;
+    padding: 5px;
+    border: gray 1px solid;
+    border-radius: 5px;
 }
 
 input{
-    margin-block: 10px;
+    margin-bottom: 10px;
 }
 
 .notes{
@@ -40,5 +58,37 @@ input{
     border-radius: 10px;
     margin-block: 10px;
     padding: 15px;
-    width: max(400px, 40%);
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.buttons{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80vw;
+}
+
+button{
+    padding: 5px 10px;
+    margin: 2px 0px;
+}
+
+@media (min-width: 400px) {
+    h2{
+
+    }
+}
+
+@media (min-width: 800px) {
+    .note{
+        width: 35%;
+        margin-inline: 10px;
+    }
+    .notes{
+        flex-flow: row wrap;
+        justify-content: center;
+    }
 }
